--- a/sotryofTAreq.html
+++ b/sotryofTAreq.html
@@ -9,5 +9,12 @@
 <body>
     <p>dhaka</p>
     <h1>jhfdsfhysjdfhsd</h1>
+    <p>
+        <ol>
+            <li>
+                <p>mama i can push up git hub</p>
+            </li>
+        </ol>
+    </p>
 </body>
 </html>
